# course-bot

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
Architecture-Planning/: 05-query-pipeline.md  07-storage.md  10-api-contracts.md  ADR-002-qdrant.md  ADR-003-redis-streams.md
apps/ai-service/: README.md  main.py  pyproject.toml  requirements.txt
apps/ai-service/api/: schemas.py  server.py
apps/ai-service/app/embedding/: service.py
apps/ai-service/app/evaluator/: README.md  service.py
apps/ai-service/app/generator/: README.md  service.py
apps/ai-service/app/guardrails/: README.md  injection.py  pii.py  service.py
apps/ai-service/app/hyde/: service.py
apps/ai-service/app/pdf_extractor/: service.py
apps/ai-service/app/providers/: __init__.py  base.py
apps/ai-service/app/providers/openai/: client.py
apps/ai-service/app/query_enhancer/: service.py
apps/ai-service/app/reranker/: README.md  service.py
apps/ai-service/app/retriever/: README.md  bm25.py  qdrant_client.py  service.py
apps/ai-service/app/summary_generator/: service.py
apps/ai-service/app/title_generator/: README.md  service.py
apps/ai-service/app/url_extractor/: service.py
apps/ai-service/config/: settings.py
docs/: 01-product-requirements.md  08-security.md  09-deployment.md  README.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_user_profile_and_document_metadata.down.sql  (+2 more)
scaffold/: .env.example  (+2 more)
(+142 files in other folders)
